# kakarot-opcode-test

./: .env  Cargo.toml  test_cases.json
kakarot-smart-contracts-scripts/: test.txt
kakarot-smart-contracts-scripts/Counter/: ContractBytecode.txt  ethers_counter_script.js  package-lock.json  package.json  viem_counter_script.js
src/: client.rs  config.rs  main.rs  utils.rs
