[package]
name = "kakarot-rust-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = "0.3.0"
eyre = "0.6.5"
url = "2.2.2"
dotenv = "0.15.0"
tokio = { version = "1.13.0", features = ["full"] }
hex = "0.4.3"

